[project]
name = "yapi-mcp"
version = "0.1.0"
description = "YAPI MCP Server - 让 AI 助手能够获取 YAPI 平台上的接口文档信息"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
]

[project.scripts]
yapi-mcp = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]